chỉ có nhân viên mới có nút truy cập trang quản tr, chỉ có độc giả mới có menu